fixed registration to home page

--- a/mentalhealthai/api/templates/home.html
+++ b/mentalhealthai/api/templates/home.html
@@ -110,7 +110,7 @@
           </form>
         {% else %}
           <a href="{% url 'login' %}?next={% url 'chat' %}">Кіру</a>
-          <a href="{% url 'signup' %}">Тіркелу</a>
+          <a href="{% url 'register' %}">Тіркелу</a>
         {% endif %}
       </div>
     </div>
